# microtron

./: LICENSE  README.md  main.py  pyproject.toml  submit_modal_jobs.py
microtron/: model.py  playground.py  tokenizer.py
