[project]
name = "microtron"
version = "0.1.0"
description = "A clean, minimal, and education-oriented 3D parallel implementation (Data Parallel, Tensor Parallel, Pipeline Parallel) for pretraining a modern sparse model like gpt-oss from scratch."
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "modal>=1.1.4",
    "numpy==2.3.2",
    "tiktoken==0.11.0",
    "torch==2.8.0",
    "transformers==4.56.1",
]
